--- a/project/templates/authentication/signin.html
+++ b/project/templates/authentication/signin.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     
+    {% for message in messages %}
+    <div class="alert alert- {{message.tags}} alert-dismissable fade show" role="alert">
+        <strong>{{message}}</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+
     <h3>Sign-In</h3>
+
 
     <form action="/signin" method="post">
     {% csrf_token %}
